 * Fixed how lsl.reader.vdif and lsl.writer.vdif deal with non-zero reference epochs
 * Added support for LWA-NA and other NDP-based stations
 * Changed lsl.common.metabundle into a general module that can work with metadata from any station
 * Added a DRX8 reader for future data format support
 * Updated gatherDebugging.py to make it more useful

2.2.0
 * Add a keyword to lsl.imaging.selfcal functions that will return whether or not a call converged
 * Made lsl.readers.buffer.TBFFrameBuffer more robust
 * Fixed reference counting in lsl.imaging._gridder
 * Moved data used for unit tests from lsl/data to tests/data to keep them out of the install
 * Various cleanups to internal regular expressions
 * Changed the file downloaders to only show progress for interactive sessions
 * Updated possm.py to works with the current version of LSL
 * Removed aipy code in lsl.sim.vis in favor of direct calls to aipy
 * Added support to the lsl.readers for returning DRX, TBN, and TBF data as "ci8" data
 * Added support to the lsl.readers for returning VDIF data as "i8" data

2.1.8
 * Added polarization basis conversions functions to lsl.imaging.utils
 * Improved TBF frame count reliability
 * Fixed several bugs in lsl.sim.dp.point_source() that lead to data that would not image properly
 * Dropped unlzw in favor of using the gzip utility
 * Made antenna inclusion/exclusion more robust in lsl.imaging.data.VisibilityDataSet.get_antenna_subset()
 * Added support for "long (ionospheric) product names"
 * Updated the Hamming window coefficients
 * Switched the PFB in lsl.correlator.fx to a Hamming window
 * Updated the documentation in lsl.correlator.fx to clarify that 'pfb' enables a 4-tap Hamming windowed PFB
 * Updated the documentation in lsl.correlator.fx to clarify that 'pfb' overrides the 'window' keyword
 * Added better documentation on the LWA data formats
 * Fixed a bug in lsl.reader.ldp.TBFFile that caused it to die on files with gaps in the frequency coverage