@@ -18,6 +18,9 @@ coverage and time delays.  The functions in the module:
     Added support for ephem.Angle, astropy.coordinates.Angle, and 
     astropy.coordinates.EarthLocation instances in the compute_uvw() and 
     compute_uv_track() functions.
+    
+.. versionchanged:: 3.0.0
+    Dropped support for the 'indicies' keyword.
 """
 
 import ephem
@@ -44,43 +47,43 @@ __all__ = ['get_baselines', 'baseline_to_antennas', 'antennas_to_baseline',
 speedOfLight = speedOfLight.to('m/s').value
 
 
-def get_baselines(antennas, antennas2=None, include_auto=False, indicies=False):
+def get_baselines(antennas, antennas2=None, include_auto=False):
     """
     Generate a list of two-element tuples that describe which antennae
     compose each of the output uvw triplets from compute_uvw/compute_uv_track.
-    If the indicies keyword is set to True, the two-element tuples 
-    contain the indicies of the stands array used, rather than the actual
-    stand numbers.
+    
+    .. versionchanged:: 3.0.0
+        Dropped the 'indicies' keyword.
     """
-
+    
     if include_auto:
         offset = 0
     else:
         offset = 1
-
+        
     out = []
     N = len(antennas)
     
     # If we don't have an antennas2 array, use antennas again
     if antennas2 is None:
         antennas2 = antennas
-    
-    for i in range(0, N-offset):
+        
+    for i in range(0, N):
         for j in range(i+offset, N):
-            if indicies:
-                out.append( (i, j) )
-            else:
-                out.append( (antennas[i], antennas2[j]) )
-
+            out.append( (antennas[i], antennas2[j]) )
+            
     return out
     
 
-def baseline_to_antennas(baseline, antennas, antennas2=None, baseline_list=None, include_auto=False, indicies=False):
+def baseline_to_antennas(baseline, antennas, antennas2=None, baseline_list=None, include_auto=False):
     """
     Given a baseline number, a list of stands, and options of how the base-
     line listed was generated, convert the baseline number to antenna numbers.
     Alternatively, use a list of baselines instead of generating a new list.  
     This utility is useful for figuring out what antennae comprise a baseline.
+    
+    .. versionchanged:: 3.0.0
+        Dropped the 'indicies' keyword.
     """
     
     # If we don't have an antennas2 array, use antennas again
@@ -89,37 +92,37 @@ def baseline_to_antennas(baseline, antennas, antennas2=None, baseline_list=None,
 
     # Build up the list of baselines using the options provided
     if baseline_list is None:
-        baseline_list = get_baselines(antennas, antennas2=antennas2, include_auto=include_auto, indicies=indicies)
+        baseline_list = get_baselines(antennas, antennas2=antennas2, include_auto=include_auto)
     
     # Select the correct one and return based on the value of indicies
-    i,j = baseline_list[baseline]
-    return i,j
+    return baseline_list[baseline]
 
 
-def antennas_to_baseline(ant1, ant2, antennas, antennas2=None, baseline_list=None, include_auto=False, indicies=False):
+def antennas_to_baseline(ant1, ant2, antennas, antennas2=None, baseline_list=None, include_auto=False):
     """
     Given two antenna numbers, a list of stands, and options to how the base-
     line listed was generated, convert the antenna pair to  a baseline number. 
     This utility is useful for picking out a particular pair from a list of
     baselines.
+    
+    .. versionchanged:: 3.0.0
+        Dropped the 'indicies' keyword.
     """
     
     # If we don't have an antennas2 array, use antennas again
     if antennas2 is None:
         antennas2 = antennas
-
+        
     # Build up the list of baselines using the options provided
     if baseline_list is None:
-        baseline_list = get_baselines(antennas, antennas2=antennas2, include_auto=include_auto, indicies=indicies)
-    
+        baseline_list = get_baselines(antennas, antennas2=antennas2, include_auto=include_auto)
+        
     # Loop over the baselines until we find one that matches.  If we don't find 
     # one, return -1
-    i = 0
-    for baseline in baseline_list:
+    for i,baseline in enumerate(baseline_list):
         if ant1 in baseline and ant2 in baseline:
             return i
-        i = i + 1
-        
+            
     return -1
 
 
@@ -161,7 +164,7 @@ def compute_uvw(antennas_or_baselines, HA=0.0, dec=34.070, freq=49.0e6, site=lwa
         freq = np.array(freq, ndmin=1)
         
     if isinstance(antennas_or_baselines[0], Antenna):
-        baselines = get_baselines(antennas_or_baselines, include_auto=include_auto, indicies=False)
+        baselines = get_baselines(antennas_or_baselines, include_auto=include_auto)
     elif isinstance(antennas_or_baselines[0], (tuple, list)):
         if isinstance(antennas_or_baselines[0][0], Antenna) and len(antennas_or_baselines[0]) == 2:
             baselines = antennas_or_baselines
@@ -248,7 +251,7 @@ def compute_uv_track(antennas_or_baselines, dec=34.070, freq=49.0e6, site=lwa1):
     """
     
     if isinstance(antennas_or_baselines[0], Antenna):
-        baselines = get_baselines(antennas_or_baselines, include_auto=False, indicies=False)
+        baselines = get_baselines(antennas_or_baselines, include_auto=False)
     elif isinstance(antennas_or_baselines[0], (tuple, list)):
         if isinstance(antennas_or_baselines[0][0], Antenna) and len(antennas_or_baselines[0]) == 2:
             baselines = antennas_or_baselines
