@@ -1047,7 +1047,7 @@ def __build_sim_data(aa, srcs, pols=['xx', 'yy', 'xy', 'yx'], jd=None, chan=None
     # Build the simulated data.  If no baseline list is provided, build all 
     # baselines available
     if baselines is None:
-        baselines = uvutils.get_baselines(np.zeros(len(aa.ants)), indicies=True)
+        baselines = uvutils.get_baselines(np.arange(len(aa.ants)))
         
     # Define output data structure
     freq = aa.get_afreqs()*1e9
